docs/sf-export/sfdx-raw/objects/SASInboundAPIMapping__mdt/SASInboundAPIMapping__mdt.object-meta.xml
<CustomObject>
    <label>SASInboundAPIMapping</label>
    <pluralLabel>SASInboundAPIMapping</pluralLabel>
</CustomObject>