docs/sf-export/sfdx-raw/objects/SASInboundAPIMapping__mdt/fields/API_Call_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Call_Name__c</fullName>
    <label>API Call Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft Update</fullName>
                <default>true</default>
                <label>Draft Update</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>