docs/sf-export/sfdx-raw/objects/SASInboundAPIMapping__mdt/fields/SAS_Attribute_Name__c.field-meta.xml
<CustomField>
    <fullName>SAS_Attribute_Name__c</fullName>
    <label>SAS Attribute Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>