docs/sf-export/sfdx-raw/objects/SASInboundAPIMapping__mdt/fields/SF_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>SF_Field_Name__c</fullName>
    <label>SF Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>